# Appilication

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  kyros-backup.pem  kyros-backup.pub  kyros-prod-new.pem  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  text  text.json  wrangler.jsonc  wrangler.toml
backend/: .env.example  Dockerfile  alembic.ini  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_extensions_and_enums.py  0001_initial_schema.py  0002_consultation_requests.py  0002_identity_and_consent.py  0003_audit_log.py  0003_prescription_structured_timing.py  0004_booking_inquiries.py  0004_create_kc_refunds.py  0005_create_kc_care_plans.py  0005_wellness_domain.py  0006_clinic_domain.py  0006_reconcile_user_columns.py  0007_medication_catalog.py  0007_payments.py  0008_add_parent_consultation_id.py  0008_consultations.py  0009_lab_reports.py  0009_unique_active_consultation_per_condition.py  0010_add_recording_egress_id.py  0010_lab_orders.py  0011_add_video_max_participants.py  0011_prescriptions.py  0012_add_wn_symptom_checkins.py  0012_users_expo_push_token.py  0013_education.py  0013_reminder_provenance_and_ends_at.py  0014_doctor_portal_polish.py  0015_booking_inquiry_gender_skip.py  0016_analytics_metrics.py  0017_notification_center.py  0018_leads_and_inquiry_contact.py  0019_admin_role_enum.py  0020_followups_interactions.py  0021_password_reset_google_oauth.py  0022_staff_rbac_permission_model.py  0023_staff_mfa_and_session_audience.py  0024_patient_notes.py  0024_soap_notes_and_icd10.py  0025_drug_catalogue_and_schedule.py  0026_content_review_publish_split.py  (+4 more)
backend/app/: main.py  worker.py
backend/app/adminui/: deps.py  router.py
backend/app/api/: deps.py  errors.py
backend/app/core/: audit.py  config.py  exceptions.py  ids.py  logging.py  pagination.py  permissions.py  ratelimit.py  rbac.py  schedule.py  security.py  time.py
backend/app/db/: base.py  enums.py  mixins.py  redis.py  schema_check.py  session.py
backend/app/integrations/: abha.py  aisensy.py  authkey.py  document_ai.py  email.py  expo_push.py  google_oauth.py  hms.py  livekit_video.py  msg91.py  s3.py  (+1 more)
backend/scripts/: backfill_patient_coordinators.py  create_staff_user.py  generate_openapi.py  openapi_to_postman.py  seed_dev.py
backend/tests/: conftest.py  test_biomarker_trends.py  test_document_ai.py  test_lab_reports.py  test_otp_email_fallback.py  test_prescriptions.py  test_security_hardening.py  test_smoke.py
(+809 files in other folders)
