[project]
name = "kyros-backend"
version = "0.1.0"
description = "Kyros Clinic — FastAPI backend serving all six surfaces"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]>=0.115.0,<0.116.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "argon2-cffi>=23.0.0",
    "structlog>=24.0.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "livekit-api>=0.7.0",
    "python-multipart>=0.0.9",
    "boto3>=1.34.0",
    "google-cloud-documentai>=2.29.0",
    "weasyprint>=62.0",
    "pyotp>=2.9.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
    "types-python-jose>=3.3.0",
    "faker>=25.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "RUF"]
ignore = [
    "E501",
    "B008",   # FastAPI Depends() in argument defaults is intentional
    "UP046",  # Generic subclass syntax requires Pydantic >=2.7; pin after upgrade
    "UP047",  # Generic function type-param syntax; TypeVar kept for clarity
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "jose.*",
    "argon2.*",
    "structlog.*",
    "alembic.*",
    "asyncpg.*",
    "boto3.*",
    "botocore.*",
    "google.*",
    "cryptography.*",
    "pyotp.*",
    "livekit.*",
]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # FastAPI 0.115 uses asyncio.iscoroutinefunction which Python 3.14 deprecated.
    # Suppressed until FastAPI cuts a release that switches to inspect.iscoroutinefunction.
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning:fastapi",
]
